# Remmy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TinyRPC.sln  remmy.sln  tinyrpc.sln
TinyRPC/: Makefile  TinyRPC.vcxproj  commAsio.h  comm_asio.h  concurrent_queue.h  concurrentqueue.h  logging.cpp  logging.h  message.h  protocol.h  serialize.h  singleton.h  sleeplist.h  streambuffer.h  stringstream.h  test.cpp  tinycomm.cpp  tinycomm.h  tinydatatypes.h  tinylock.h  tinymessagequeue.h  tinyrpc.cpp  tinyrpc.h  tinythread.h
TinyRPC/Debug/: CL.read.1.tlog  CL.write.1.tlog  TinyRPC.lastbuildstate  cl.command.1.tlog  vc110.idb
TinyRPC/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  TinyRPC.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb  vc120.idb
TinyRPC/x64/Debug/TinyRPC.tlog/: CL.read.1.tlog  CL.write.1.tlog  TinyRPC.lastbuildstate  cl.command.1.tlog
remmy/: comm.h  comm_asio.h  comm_zmq.h  concurrent_queue.h  datatypes.h  logging.h  message.h  protocol.h  rpc_stub.h  serialize.h  set_thread_name.h  sleeplist.h  streambuffer.h  tinyrpc.vcxproj  unique_id.h
simple_rpc/: comm.h  comm_asio.h  comm_zmq.h  concurrent_queue.h  datatypes.h  logging.h  message.h  rpc_stub.h  set_thread_name.h  simple_rpc.h  singleton.h  sleeplist.h  streambuffer.h  tinyrpc.vcxproj
test/: Makefile  test.cpp  test.vcxproj  test.vcxproj.filters
tinyrpc/: comm.h  comm_asio.h  comm_zmq.h  concurrent_queue.h  logging.cpp  logging.h  message.h  protocol.h  serialize.h  set_thread_name.h  simple_rpc.h  singleton.h  sleeplist.h  streambuffer.h  test.cpp  tinycomm.h  tinydatatypes.h  tinyrpc.h  tinyrpc.vcxproj  unique_id.h
x64/Debug/: TinyRPC.ilk
